--- a/ldnefei.css
+++ b/ldnefei.css
@@ -7,6 +7,6 @@ body {
 .navbar-brand.visible-lg.visible-md {
     content: url('https://i.ibb.co/kV5yHfyd/Moon-Transparent-PNG-Clip-Art-639687983.png');
     width: 150px;
-    height: auto;
+    height: 150px;
 }
     
