--- a/ldnefei.css
+++ b/ldnefei.css
@@ -1,7 +1,6 @@
 body {
-    background: #000000 url('https://i.ibb.co/BK4mK52R/ivan-bandura-w-Q00u-Un8-Og-unsplash.jpg') !important;
+    background: #000000 url('https://i.ibb.co/BK4mK52R/ivan-bandura-w-Q00u-Un8-Og-unsplash.jpg') position=fixed !important;
     color: #FFFFFF !important;
-    background-position: fixed !important;
 }
 
 .navbar-brand.visible-lg.visible-md {
