--- a/ldnefei.css
+++ b/ldnefei.css
@@ -1,6 +1,8 @@
 body {
-    background: #000000 url('https://i.ibb.co/BK4mK52R/ivan-bandura-w-Q00u-Un8-Og-unsplash.jpg') position=fixed !important;
+    background: #000000 url('https://i.ibb.co/BK4mK52R/ivan-bandura-w-Q00u-Un8-Og-unsplash.jpg') !important;
     color: #FFFFFF !important;
+    background-attachment: fixed;
+    background-size: contain;
 }
 
 .navbar-brand.visible-lg.visible-md {
